--- a/Page1.xaml
+++ b/Page1.xaml
@@ -6,9 +6,82 @@
       xmlns:local="clr-namespace:ComputerShop"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Page1">
+      Title="Login">
 
     <Grid>
-        <TextBlock Text="Hello World!"/>
+        <!-- Fő elosztás -->
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <!-- Bal oldali tartalom -->
+        <Border>
+            <TextBlock 
+                x:Name="largeWindow" 
+                Text="Üdv a rendszerben!"
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Center" 
+                FontSize="20" 
+                FontWeight="Bold"/>
+        </Border>
+
+        <!-- Jobb oldali tartalom -->
+        <Grid Grid.Column="1" Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"  />
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <!-- Fejléc -->
+            <TextBlock Grid.Row="0"
+                       FontSize="18" 
+                       FontWeight="Bold" 
+                       HorizontalAlignment="Center" 
+                       Margin="0,0,0,12" 
+                       Text="Jelentkezz be"/>
+
+            <!-- Űrlap -->
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" Grid.Column="0"
+                           VerticalAlignment="Center"
+                           Text="Felhasználónév:"
+                           Margin="0,0,8,0"/>
+
+                <TextBox x:Name="userNameTextBox"
+                         Grid.Row="0"
+                         Grid.Column="1"/>
+
+
+                <TextBlock Grid.Row="1" Grid.Column="0"
+                           VerticalAlignment="Center"
+                           Text="Jelszó:"
+                           Margin="0,0,8,0"/>
+
+                <PasswordBox x:Name="passwordTextBox"
+                         Grid.Row="1"
+                         Grid.Column="1"/>
+
+                <StackPanel Grid.Row="2">
+                <Button x:Name="loginButton"
+                        HorizontalAlignment="Center" 
+                        Margin="20,30,20,-30" 
+                        Content="Bejelentkezés" 
+                        Width="110" 
+                        />
+                </StackPanel>
+            </Grid>
+        </Grid>
     </Grid>
 </Page>
